# pylidar

./: .gitignore  CLAUDE.md  CMakeLists.txt  NOTICE  README.md  findings.md  progress.md  pyproject.toml  rd.md  task_plan.md
.github/workflows/: ci.yml
docs/specs/: 2026-04-30-pylidar-its-design.md
docs/superpowers/specs/: 2026-05-07-pylidar-its-port-design.md
examples/: its_demo.py
python/pylidar/: __init__.py  _core.pyi  _validate.py  catalog.py  decimate.py  io.py  locate_trees.py  merge.py  raster.py  segmentation.py
src/bindings/: CMakeLists.txt  module.cpp
src/core/: CMakeLists.txt
src/core/common/: CMakeLists.txt  kdtree.hpp  log.hpp  matrix2d.hpp  nanoflann_adaptor.hpp  point.hpp  point_cloud.hpp  span.hpp
src/core/its/: CMakeLists.txt  _placeholder.cpp  chm_smooth.cpp  chm_smooth.hpp  dalponte2016.cpp  dalponte2016.hpp  li2012.cpp  li2012.hpp  lmf.cpp  lmf.hpp  shape.hpp  silva2016.cpp  silva2016.hpp  smooth_height.cpp  smooth_height.hpp  watershed_ext.cpp  watershed_ext.hpp
tests/: conftest.py  test_api_smoke.py  test_catalog.py  test_chm_smooth.py  test_dalponte2016.py  test_dalponte2016_from_treetops.py  test_decimate_highest.py  test_demo_e2e.py  test_demo_e2e_smoke.py  test_demo_helpers.py  test_io_parse_select_visibility.py  test_io_point_mask.py  test_io_read_las.py  test_li2012.py  test_lmf.py  test_locate_trees.py  test_m0_smoke.py  test_matrix2d.py  test_merge_raster_labels.py  test_raster_layout.py  test_rasterize_canopy_p2r.py  test_rasterize_canopy_pitfree.py  test_silva2016.py  test_silva2016_chm.py  test_smooth_height.py  test_watershed.py  test_watershed_ext.py  test_write_las_with_treeid.py
tests/fixtures/: README.md  _make_fixtures.py  chm_smooth_corner_circular_three_neighbors.npz  chm_smooth_corner_gaussian.npz  chm_smooth_corner_nan_propagates.npz  chm_smooth_corner_square_shape.npz  chm_smooth_degenerate_single_point.npz  chm_smooth_happy.npz  dalponte2016_corner_tie.npz  dalponte2016_degenerate.npz  dalponte2016_happy.npz  li2012_corner_R0_skips_prepass.npz  li2012_corner_radius_clip.npz  li2012_corner_th_boundary.npz  li2012_degenerate_below_hmin.npz  li2012_happy.npz  lmf_chm_corner_square_shape.npz  lmf_chm_corner_tie_equal_neighbors.npz  lmf_chm_degenerate_all_below_hmin.npz  lmf_chm_happy.npz  lmf_points_corner_nonuniform_ws_cascade_off.npz  lmf_points_corner_square_shape.npz  lmf_points_corner_tie_equal_z.npz  lmf_points_degenerate_below_hmin.npz  lmf_points_happy.npz  silva2016_corner_boundary.npz  silva2016_degenerate_empty.npz  silva2016_happy.npz  watershed_corner_nan_treated_as_no_tree.npz  watershed_corner_tol_gates_low_peak.npz  watershed_degenerate_below_th_tree.npz  watershed_happy.npz
tools/: gen_synthetic_las.py  regen_fixtures.R
